--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -18,6 +20,7 @@
   },
   "homepage": "https://github.com/luoshushu/SL-UI-React#readme",
   "devDependencies": {
+    "@types/react": "^16.9.49",
     "html-webpack-plugin": "^4.4.1",
     "typescript": "^4.0.2",
     "webpack": "^4.44.1",
@@ -25,6 +28,8 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "awesome-typescript-loader": "^5.2.1"
+    "awesome-typescript-loader": "^5.2.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   }
 }
