--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/luoshushu/SL-UI-React#readme",
   "devDependencies": {
     "@types/react": "^16.9.49",
+    "@types/react-dom": "^16.9.8",
     "html-webpack-plugin": "^4.4.1",
     "typescript": "^4.0.2",
     "webpack": "^4.44.1",
