--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "SL-UI-React",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/lib/index.js",
+  "main": "dist/lib/index",
   "types": "dist/lib/index",
   "scripts": {
     "test": "cross-env NODE_ENV=test jest --config=jest.config.js --runInBand",
@@ -21,17 +21,25 @@
   },
   "homepage": "https://github.com/luoshushu/SL-UI-React#readme",
   "devDependencies": {
-    "@types/react": "^16.9.49",
-    "@types/react-dom": "^16.9.8",
-    "cross-env": "^7.0.2",
-    "html-webpack-plugin": "^4.4.1",
-    "typescript": "^4.0.2",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-react": "^7.0.0",
+    "@types/jest": "^24.0.9",
+    "@types/react": "^16.8.7",
+    "@types/react-dom": "^16.8.2",
+    "@types/react-test-renderer": "^16.8.1",
+    "awesome-typescript-loader": "^5.2.1",
+    "babel-jest": "^24.3.1",
+    "cross-env": "^5.2.0",
+    "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.3.1",
+    "react-test-renderer": "^16.8.4",
+    "ts-jest": "^24.0.0",
+    "typescript": "^3.3.3333",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
-    "awesome-typescript-loader": "^5.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
