feat: icon组件样式修改

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "SL-UI-React",
+  "name": "sl-ui-react",
   "version": "1.0.0",
   "description": "",
   "main": "dist/lib/index",
@@ -30,9 +30,13 @@
     "awesome-typescript-loader": "^5.2.1",
     "babel-jest": "^24.3.1",
     "cross-env": "^5.2.0",
+    "css-loader": "^4.3.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.3.1",
+    "node-sass": "^4.14.1",
     "react-test-renderer": "^16.8.4",
+    "sass-loader": "^10.0.3",
+    "style-loader": "^2.0.0",
     "svg-sprite-loader": "^5.0.0",
     "ts-jest": "^24.0.0",
     "typescript": "^3.3.3333",
