--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "babel-preset-react-app": "^9.1.2",
     "cross-env": "^5.2.0",
     "css-loader": "^4.3.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.3.1",
     "node-sass": "^4.14.1",
