--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "cross-env NODE_ENV=test jest --config=jest.config.js --runInBand",
     "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.dev.js",
-    "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js"
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
+    "ci":"cross-env  NODE_ENV=test JEST_JUNIT_OUTPUT=./test-tesults/jest/results.xml jest --config=jest.config.js --runInBand "
   },
   "repository": {
     "type": "git",
@@ -36,6 +37,7 @@
     "enzyme-adapter-react-16": "^1.15.5",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.3.1",
+    "jest-junit": "^12.0.0",
     "node-sass": "^4.14.1",
     "react-test-renderer": "^16.8.4",
     "sass-loader": "^10.0.3",
