--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "cross-env NODE_ENV=test jest --config=jest.config.js --runInBand",
     "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.dev.js",
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
-    "ci": "cross-env  NODE_ENV=test JEST_JUNIT_OUTPUT=./test-tesults/jest/results.xml jest --config=jest.config.js --runInBand "
+    "ci": "cross-env NODE_ENV=test JEST_JUNIT_OUTPUT=./test-results/jest/results.xml jest --config=jest.config.ci.js"
   },
   "repository": {
     "type": "git",
@@ -16,7 +16,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/luoshushu/SL-UI-React/issues"
   },
@@ -37,14 +37,14 @@
     "enzyme-adapter-react-16": "^1.15.5",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.3.1",
-    "jest-junit": "^12.0.0",
+    "jest-junit": "^6.3.0",
     "node-sass": "^4.14.1",
     "react-test-renderer": "^16.8.4",
     "sass-loader": "^10.0.3",
     "style-loader": "^2.0.0",
     "svg-sprite-loader": "^5.0.0",
     "ts-jest": "^24.0.0",
-    "typescript": "^4.0.3",
+    "typescript": "^3.3.3333",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1"
