--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sl-ui-react",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "main": "dist/lib/index",
   "types": "dist/lib/index",
@@ -10,6 +10,9 @@
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
     "ci": "cross-env NODE_ENV=test JEST_JUNIT_OUTPUT=./test-results/jest/results.xml jest --config=jest.config.ci.js"
   },
+  "files": [
+    "/dist/**/*"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/luoshushu/SL-UI-React.git"
