--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,14 +44,13 @@ jobs:
       - run: yarn ci
       - store_test_results:
           path: test-results
-  #发布
   publish:  
     <<: *defaults
     steps:
       - attach_workspace:
           at: .
       - run: npm config set //registry.npmjs.org/:_authToken $NPM_TOKEN
-      - run: npm publish
+      - run: yarn publish
 workflows:
   version: 2
   build_accept_deploy:
