--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,8 +21,8 @@ jobs:
           root: .
           paths:
             - node_modules
-  build:
-    <<: *defaults
+  build: # 自动打包 
+    <<: *defaults 
     steps:
       - checkout
       - attach_workspace:
@@ -35,7 +35,7 @@ jobs:
             - package.json
             - LICENSE
             - README.md
-  test:
+  test: #自动测试
     <<: *defaults
     steps:
       - checkout
@@ -44,13 +44,13 @@ jobs:
       - run: yarn ci
       - store_test_results:
           path: test-results
-  publish:  
+  publish:   #自动发布npm
     <<: *defaults
     steps:
       - attach_workspace:
           at: .
       - run: npm config set //registry.npmjs.org/:_authToken $NPM_TOKEN
-      - run: yarn publish
+      - run: npm publish
 workflows:
   version: 2
   build_accept_deploy:
@@ -65,8 +65,8 @@ workflows:
       - publish:
           requires:
             - build
-          filters:
+          filters:  #按条件发布 打tags
             tags:
               only: /^v[0-9]+(\.[0-9]+)*/
             branches:
-              ignore: /.*/
+              ignore: /.*/  #所有分支都不部署只认tags 
